made the resume view and fixed the scroll overflow of the screen

--- a/src/app.scss
+++ b/src/app.scss
@@ -14,6 +14,9 @@ main{
     width: 100%;
     background-image: url(/mac-wallpaper.jpg);
 
+    position: relative;
+    overflow: hidden;
+
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
